[gd_scene load_steps=10 format=3 uid="uid://cf2mff1p3c5wi"]

[ext_resource type="Script" uid="uid://dv0m6slg8qtyk" path="res://scenes/main_scene.gd" id="1_y05y5"]
[ext_resource type="FontFile" uid="uid://ch6wwtia3hyi5" path="res://fonts/pixelart.ttf" id="2_8iiji"]
[ext_resource type="Script" uid="uid://dx8oihm0tjf1d" path="res://scripts/id_area.gd" id="2_b4dq4"]

[sub_resource type="LabelSettings" id="LabelSettings_8qvh0"]
font = ExtResource("2_8iiji")

[sub_resource type="LabelSettings" id="LabelSettings_dv164"]
font = ExtResource("2_8iiji")

[sub_resource type="LabelSettings" id="LabelSettings_3p3cc"]
font = ExtResource("2_8iiji")

[sub_resource type="LabelSettings" id="LabelSettings_r3g5y"]
font = ExtResource("2_8iiji")

[sub_resource type="LabelSettings" id="LabelSettings_k3t1o"]
font = ExtResource("2_8iiji")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k3aik"]
size = Vector2(334, 159)

[node name="MainScene" type="Node2D"]
script = ExtResource("1_y05y5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CatSpawnPoint" type="Node2D" parent="CanvasLayer"]
position = Vector2(349, 57)

[node name="ClockSpawnPoint" type="Node2D" parent="CanvasLayer"]
position = Vector2(501, 80)

[node name="CellPhoneSpawnPoint" type="Node2D" parent="CanvasLayer"]
position = Vector2(344, 207)

[node name="Button" type="Button" parent="."]
offset_left = 5.0
offset_top = 6.0
offset_right = 233.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("2_8iiji")
text = "Inspect Next Kitty"

[node name="AcceptButton" type="Button" parent="."]
offset_left = 25.0
offset_top = 56.0
offset_right = 105.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("2_8iiji")
text = "ACCEPT"

[node name="RejectButton" type="Button" parent="."]
offset_left = 131.0
offset_top = 56.0
offset_right = 211.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("2_8iiji")
text = "REJECT"

[node name="Errors" type="Label" parent="."]
offset_left = 513.0
offset_top = 35.0
offset_right = 583.0
offset_bottom = 58.0
text = "ERRORS: "
label_settings = SubResource("LabelSettings_8qvh0")

[node name="Correct" type="Label" parent="."]
offset_left = 503.0
offset_top = 8.0
offset_right = 579.0
offset_bottom = 31.0
text = "CORRECT:"
label_settings = SubResource("LabelSettings_dv164")

[node name="CorrectScoreLabel" type="Label" parent="."]
offset_left = 595.0
offset_top = 12.0
offset_right = 632.0
offset_bottom = 35.0
label_settings = SubResource("LabelSettings_3p3cc")

[node name="ErrorScoreLabel" type="Label" parent="."]
offset_left = 595.0
offset_top = 39.0
offset_right = 635.0
offset_bottom = 62.0
label_settings = SubResource("LabelSettings_r3g5y")

[node name="Debug" type="Label" parent="."]
offset_left = 19.0
offset_top = 438.0
offset_right = 621.0
offset_bottom = 472.0
label_settings = SubResource("LabelSettings_k3t1o")

[node name="IDArea" type="Area2D" parent="." groups=["dropable"]]
script = ExtResource("2_b4dq4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="IDArea"]
position = Vector2(346, 393.5)
shape = SubResource("RectangleShape2D_k3aik")

[node name="ColorRect" type="ColorRect" parent="IDArea"]
offset_left = 182.0
offset_top = 313.0
offset_right = 510.0
offset_bottom = 468.0

[node name="NextDayButton" type="Button" parent="."]
offset_left = 43.0
offset_top = 98.0
offset_right = 175.0
offset_bottom = 130.0
theme_override_fonts/font = ExtResource("2_8iiji")
text = "Advance Day"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="RejectButton" to="." method="_on_reject_button_pressed"]
[connection signal="pressed" from="NextDayButton" to="." method="_on_next_day_button_pressed"]
